--- a/src/components/AboutPage/AboutPage.css
+++ b/src/components/AboutPage/AboutPage.css
@@ -4,7 +4,7 @@
 	display: flex;
 	justify-content: center;
 	color: var(--text);
-	background: var(--bg-primary);
+	background: var(--bg-secondary);
 }
 
 .about-container {
