--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,11 +1,16 @@
 /* Footer */
+.footer-container {
+	background-color: var(--bg-secondary);
+}
 footer {
 	text-align: center;
 	padding: 1.5rem 0;
-	border-top: 1px solid var(--border);
-	margin-top: 4rem;
+	border-top: 1px solid var(--text-secondary);
+
+	background-color: var(--bg-secondary);
 }
 .footer-legal-container {
+	background-color: var(--bg-secondary);
 	display: flex;
 	justify-content: center;
 	gap: 2rem;
