--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -57,8 +57,8 @@
 	margin: auto;
 }
 
-.card {
-	background: var(--bg-secondary);
+.hero-card {
+	background: var(--bg-primary);
 	border: 1px solid var(--accent);
 	border-radius: 10px;
 	padding: 1rem;
